--- a/src/pages/searchresults.css
+++ b/src/pages/searchresults.css
@@ -83,7 +83,7 @@
   
  #title{
   margin: 0;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: 'Manrope', sans-serif;
   font-weight: 500;
   font-size: 1rem;
   /* line-height: 1.6; */
