--- a/src/searchnew.css
+++ b/src/searchnew.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Manrope', sans-serif;
   background-color: #f1f3f4;
 }
 
