--- a/src/pages/components/chatbot.css
+++ b/src/pages/components/chatbot.css
@@ -1,5 +1,5 @@
 .query-container{
-  align-items: center;
+  /* align-items: center; */
   display: flex;
   flex-direction: row;
   padding: 10px;
@@ -22,14 +22,19 @@
     margin-right: 5px;
 }
 .chatbot-container {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
-    border: 1px solid #e0e0e0;
-    border-radius: 16px;
-    height: fit-content;
-    width: 100%;
+  position: fixed;
+  bottom: 0;
+  /* right: -7px; */
+
+  margin-top: 0;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  /* border: 1px solid #e0e0e0; */
+  border-radius: 16px;
+  height: fit-content;
+  width: 96%;
   }
   
   .chatbot-input {
@@ -45,10 +50,10 @@
     margin-top: 15px !important;
     color: #333;
     text-align: justify;
-    margin-bottom: 20px !important;
+    margin-bottom: 5%;
     font-size: 15px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .MuiInputBase-root{
     border-radius: 16px !important;
