--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
