--- a/src/pages/articleResult.css
+++ b/src/pages/articleResult.css
@@ -1,6 +1,8 @@
 #articleContainer{
-    position: absolute;
+    /* position: absolute; */
       margin: 0;
+      margin-top: 7%;
+      margin-bottom: 5%;
       top: 12%;
       left: 0%;
       max-width: 100%;
