--- a/src/pages/components/chatbot.css
+++ b/src/pages/components/chatbot.css
@@ -13,7 +13,7 @@
   border-radius: 30px;
   margin-bottom: 10px;
   width: fit-content;
-  margin-right: 20px;
+  margin-left: auto;
 }
 .query-response{ 
     color: #333;
